trunk/Archive2/4a/523cefda60acbc/output
main.cpp: In function 'int callFoo()':
main.cpp:28:20: error: expected primary-expression before '>' token
     return T::foo<U> (); ///error: expected primary-expression before '>' token
                    ^
main.cpp:28:23: error: expected primary-expression before ')' token
     return T::foo<U> (); ///error: expected primary-expression before '>' token
                       ^
main.cpp: In function 'int callFoo() [with T = D; U = B]':
main.cpp:29:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
main.cpp: In function 'int callFoo() [with T = D; U = C]':
main.cpp:29:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
